fixed bug in search on mobile

--- a/app/javascript/src/css/Antd.less
+++ b/app/javascript/src/css/Antd.less
@@ -384,6 +384,12 @@ a.bttn-small.btn-fill.border-transparent {
   background: @secondary-background;
 }
 
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+  width: 100%;
+  height: 32px;
+  padding: 0 11px;
+}
+
 .c-white {
   color: @text-color-secondary;
 }
@@ -554,7 +560,7 @@ button.btn.btn-block.btn-primary.mt-lg.login-btn {
 }
 
 .topping-mobile {
-  padding-top: 90px;
+  padding-top: 102px;
 }
 
 .advert-banner {
